Add GitHub Actions workflow for Netlify auto-deployment and sync script

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 VITE_LINE_CHANNEL_ID=2007688781
 VITE_LINE_CHANNEL_SECRET=REMOVED_LINE_CHANNEL_SECRET
 VITE_LINE_REDIRECT_URI=https://interconnect-auto-test.netlify.app/line-callback.html
+
+# Netlify Deployment Configuration
+NETLIFY_AUTH_TOKEN=REMOVED_NETLIFY_TOKEN
+NETLIFY_SITE_ID=0ed1cd25-53fa-487e-a818-dd49bcebe510
