--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "netlify-cli": "^15.0.0"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/supabase-js": "^2.52.1",
+    "dotenv": "^17.2.1",
     "node-fetch": "^2.6.9"
   }
 }
