Setup automatic Windows sync to Ver.008 folder
- Created sync-to-windows.sh and sync-to-windows-fast.sh scripts
- Added Git post-commit hook for automatic sync after commits
- Updated .gitignore to exclude test files and archives
- Configured to sync to C:\Users\ooxmi\Downloads\Ver.008【コード】INTERCONNECT
- Automatically removes unnecessary files during sync

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,24 @@ yarn-error.log*
 # Temporary files
 *.tmp
 *.temp
+*.bak
+*.old
+*.backup
+
+# Test files
+*.test.js
+*.spec.js
+test-*.js
+coverage/
+__tests__/
+
+# Archive folders
+sql-archive/
+backup/
+old/
+
+# Windows sync logs
+sync-*.log
+
+# Development specific
+*.sublime-*
