🔧 重要なバグ修正：CSS MIMEエラー・Edge Function連携・紹介コード自動適用・完全な環境設定

--- a/netlify.toml
+++ b/netlify.toml
@@ -31,3 +31,19 @@
   from = "/invite/*"
   to = "/index.html"
   status = 200
+
+# TimeRex Webhook受信（Supabase Edge Functionにプロキシ）
+[[redirects]]
+  from = "/api/timerex-webhook"
+  to = "https://YOUR_SUPABASE_PROJECT_REF.supabase.co/functions/v1/timerex-webhook"
+  status = 200
+  force = true
+  headers = {X-Forwarded-Host = "interconnect-auto.netlify.app"}
+
+# TimeRex予約セッション作成API
+[[redirects]]
+  from = "/api/timerex-booking"
+  to = "https://YOUR_SUPABASE_PROJECT_REF.supabase.co/functions/v1/timerex-booking"
+  status = 200
+  force = true
+  headers = {X-Forwarded-Host = "interconnect-auto.netlify.app"}
